# slipway_render

./: .gitignore  CHANGELOG.md  README.md  download_font.sh  download_fonts.sh  justfile  optimize_pngs.sh
src/: Cargo.toml
src-components/slipway-render-component/: Cargo.toml
src-components/slipway-render-component/src/: lib.rs
src/ac-types-generator/: Cargo.toml  build.rs
src/ac-types-generator/src/: flatten_map.rs  lib.rs  main.rs  process_class.rs  process_enum.rs  relationships.rs  sanitize.rs  typed_schema_types.rs
src/adaptive-cards/: Cargo.toml  build.rs
src/adaptive-cards-host-config/: Cargo.toml  build.rs
src/adaptive-cards-host-config/src/: generated.rs  lib.rs
src/adaptive-cards-renderer/: Cargo.toml  README.md  build.rs
src/adaptive-cards-renderer/src/: debug_mode.rs  element.rs  element_layout_data.rs  layout_context.rs  layoutable.rs  lib.rs  masked_image.rs  measure.rs  print_tree.rs  render.rs  utils.rs
src/adaptive-cards-renderer/src/adaptive_cards/: mod.rs
src/adaptive-cards-renderer/src/adaptive_cards_types/: tests.rs  utils.rs
src/adaptive-cards-renderer/src/fonts/: mod.rs
src/adaptive-cards-renderer/src/host_config/: default_host_config.rs  generated.rs  mod.rs
src/adaptive-cards-renderer/src/host_config_utils/: default_host_config.rs  mod.rs
src/adaptive-cards-renderer/src/layout_impl/: adaptive_card.rs  container.rs  container_shared.rs  measure.rs  mod.rs  text_block.rs  utils.rs
src/adaptive-cards-renderer/src/rect/: contains.rs
src/adaptive-cards-renderer/tests/: snapshot_tests.rs
src/adaptive-cards-renderer/tests/snapshot_inputs/: container_horizontal_separator.card.json  container_mixed_heights.spec.json  container_multiple_item_bleed.md  container_single_item_bleed.spec.json  container_vertical_content_alignment.card.json
src/adaptive-cards-renderer/tests/snapshots/: snapshot_tests__snapshots@container_fat_horizontal_separator.card.json.snap  snapshot_tests__snapshots@container_horizontal_separator.card.json.snap  snapshot_tests__snapshots@container_mixed_heights.card.json.snap  snapshot_tests__snapshots@container_multiple_item_bleed.card.json.snap  snapshot_tests__snapshots@container_single_item_bleed.card.json.snap  snapshot_tests__snapshots@container_vertical_content_alignment.card.json.snap
src/adaptive-cards-types-generator/: Cargo.toml  build.rs
src/adaptive-cards-types-generator/src/: layout_data.rs  lib.rs  load.rs  process_class.rs  process_enum.rs  relationships.rs  sanitize.rs
src/adaptive-cards/src/: element.rs  generated.rs  lib.rs  tests.rs
src/adaptive_cards/: Cargo.toml  build.rs
src/adaptive_cards/src/: deserializers.rs  generated.rs  lib.rs  tests.rs
src/adaptive_cards_host_config/: Cargo.toml  build.rs
src/adaptive_cards_host_config/src/: generated.rs  lib.rs
src/adaptive_cards_renderer/: Cargo.toml  README.md
src/adaptive_cards_renderer/src/: element_layout_data.rs  errors.rs  host_context.rs  layout_context.rs  layout_scratch.rs  layoutable.rs  lib.rs  masked_image.rs  premultiplied_alpha.rs  print_tree.rs  render.rs  utils.rs
src/adaptive_cards_renderer/src/host_config_utils/: mod.rs
src/adaptive_cards_renderer/src/layout_impl/: adaptive_card.rs  column.rs  column_set.rs  container.rs  container_shared.rs  fact.rs  fact_set.rs  image.rs  image_node_context.rs  measure.rs  mod.rs  table.rs  table_cell.rs  table_row.rs  text_block.rs  text_shared.rs  utils.rs
src/adaptive_cards_renderer/src/rect/: contains.rs  mod.rs
src/adaptive_cards_renderer/tests/: snapshot_tests.rs
src/adaptive_cards_renderer/tests/snapshot_inputs/: column_set_vertical_separator.card.json  column_set_vertical_separator.spec.json  container_fat_horizontal_separator.card.json  container_fat_horizontal_separator.spec.json  container_horizontal_separator.spec.json  container_mixed_heights.card.json  container_multiple_item_bleed.card.json  container_single_item_bleed.card.json  fact_set.card.json  (+26 more)
src/adaptive_cards_types_generator/: Cargo.toml  build.rs
src/adaptive_cards_types_generator/src/: common_prefix.rs  lib.rs  process_class.rs  relationships.rs  sanitize.rs  typed_schema_types.rs
src/populate-schema-defaults/: Cargo.toml
src/populate-schema-defaults/src/: lib.rs
src/populate_schema_defaults/: Cargo.toml
src/populate_schema_defaults/src/: lib.rs
src/set-schema-defaults/: Cargo.toml  temp.json
src/set-schema-defaults/src/: lib.rs
src/slipway-renderer/: Cargo.toml  build.rs
src/slipway-renderer/src/: adaptive_cards_types.rs  debug_mode.rs  element_layout_data.rs  errors.rs  host-config.rs  layout_context.rs  layout_impl.rs  layoutable.rs  lib.rs  masked_image.rs  rect.rs  render.rs  size.rs  utils.rs
src/slipway-renderer/tests/: snapshot_tests.rs
src_components/: Cargo.toml
src_components/slipway_echarts_component/: run.js  slipway_component.json  slipway_js_component.json
src_components/slipway_echarts_demo_component/: slipway_component.json
src_components/slipway_echarts_svg_component/: slipway_component.json
src_components/slipway_modify_component/: Cargo.toml  slipway_component.json
src_components/slipway_modify_component/src/: apply.rs  bindings.rs  lib.rs
src_components/slipway_modify_component/wit/: world.wit
src_components/slipway_render_component/: Cargo.toml  slipway_component.json
src_components/slipway_render_component/src/: bindings.rs  lib.rs
src_components/slipway_render_component/wit/: world.wit
src_components/slipway_svg_component/: Cargo.toml
src_components/slipway_svg_component/src/: bindings.rs  lib.rs
src_components/slipway_svg_component/wit/: world.wit
src_components/slipway_theme_component/: Cargo.toml
src_components/slipway_theme_component/src/: bindings.rs  lib.rs
src_components/slipway_theme_component/themes/: color_dark.json
src_components/slipway_theme_component/wit/: world.wit
src_components/test_data/: ac_sample_flight_update.json  echarts_rig.json  echarts_simple_rig.json  test_rig.json
wasm/slipway-renderer-component/: Cargo.toml  slipway_component.json
wasm/slipway-renderer-component/src/: lib.rs
(+96 files in other folders)
