[workspace]
members = [
    "populate_schema_defaults",
    "adaptive_cards_types_generator",
    "adaptive_cards_renderer",
    "adaptive_cards_host_config",
    "adaptive_cards",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["James Thurley"]

[workspace.dependencies]
image = "0.25.2"
serde = "1.0.209"
serde_json = "1.0.127"
insta = "1.39.0"
jsonschema = "0.18.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
