[workspace]
members = [
    "populate_schema_defaults",
    "adaptive_cards_types_generator",
    "adaptive_cards_renderer",
    "adaptive_cards_host_config",
    "adaptive_cards",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["James Thurley"]

[workspace.dependencies]
adaptive_cards = { path = "./adaptive_cards" }
adaptive_cards_host_config = { path = "./adaptive_cards_host_config" }
adaptive_cards_types_generator = { path = "./adaptive_cards_types_generator" }
populate_schema_defaults = { path = "./populate_schema_defaults" }
image = "0.25.2"
serde = "1.0.219"
serde_json = "1.0.140"
insta = "1.39.0"
jsonschema = "0.18.0"
anyhow = "1.0.86"
convert_case = "0.6.0"
itertools = "0.13.0"
prettyplease = "0.2.20"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.68"
walkdir = "2.5.0"
csscolorparser = "0.7.0"
imageproc = "0.25.0"
taffy = "0.5.2"
thiserror = "1.0.63"
parley = { version = "0.2.0", default-features = false, features = [
    "libm",
    "std",
] }
skrifa = { version = "0.22.3" }
peniko = { version = "0.2.0" }
swash = { version = "0.1.19", default-features = true }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
