[workspace]
members = [
    "slipway_modify_component",
    "slipway_render_component", "slipway_svg_component",
    "slipway_theme_component",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["James Thurley"]

[workspace.dependencies]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
