[workspace]
members = ["slipway_render_component"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["James Thurley"]

[workspace.dependencies]
adaptive_cards_host_config = { path = "../src/adaptive_cards_host_config" }
adaptive_cards = { path = "../src/adaptive_cards" }
adaptive_cards_renderer = { path = "../src/adaptive_cards_renderer" }
image = "0.25.2"
serde_json = "1.0.140"
serde = "1.0.219"
serde_path_to_error = "0.1.17"

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
strip = true
lto = true
