[package]
name = "slipway-render-component"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.25.2"
serde_json = "1.0.104"
serde = { version = "1.0.180", features = ["derive"] }
adaptive-cards-renderer = { path = "../../src/adaptive-cards-renderer" }
base64 = "0.22.1"
