[package]
name = "ac-types-generator"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.86"
convert_case = "0.6.0"
image = "0.25.1"
prettyplease = "0.2.20"
proc-macro2 = "1.0.86"
quote = "1.0.36"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
syn = "2.0.68"
walkdir = "2.5.0"
