[package]
name = "adaptive-cards-renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
csscolorparser = "0.7.0"
image.workspace = true
imageproc = "0.25.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
taffy = "0.5.2"
thiserror = "1.0.63"

[build-dependencies]
adaptive-cards-types-generator = { path = "../adaptive-cards-types-generator" }
populate-schema-defaults = { path = "../populate-schema-defaults" }

[dev-dependencies]
walkdir = "2.5.0"
jsonschema = "0.18.0"
insta = { workspace = true, features = ["json", "glob"] }
