[package]
name = "adaptive-cards-renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
adaptive-cards = { path = "../adaptive-cards" }
adaptive-cards-host-config = { path = "../adaptive-cards-host-config" }
csscolorparser = "0.7.0"
image.workspace = true
imageproc = "0.25.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
taffy = "0.5.2"
thiserror = "1.0.63"
parley = { version = "0.2.0", default-features = false, features = [
    "libm",
    "std",
] }
skrifa = { version = "0.22.3" }
peniko = { version = "0.2.0" }
swash = { version = "0.1.19", default-features = true }

[build-dependencies]
adaptive-cards-types-generator = { path = "../adaptive-cards-types-generator" }
populate-schema-defaults = { path = "../populate-schema-defaults" }

[dev-dependencies]
walkdir = "2.5.0"
jsonschema = { workspace = true }
insta = { workspace = true, features = ["json", "glob"] }
