[package]
name = "adaptive_cards"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[build-dependencies]
adaptive_cards_types_generator = { path = "../adaptive_cards_types_generator" }

[dev-dependencies]
walkdir = "2.5.0"
jsonschema = { workspace = true }
