[package]
name = "adaptive_cards_renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
adaptive_cards = { workspace = true }
adaptive_cards_host_config = { workspace = true }
adaptive_cards_types_generator = { workspace = true }
populate_schema_defaults = { workspace = true }
image = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
csscolorparser = { workspace = true }
imageproc = { workspace = true }
taffy = { workspace = true }
thiserror = { workspace = true }
parley = { workspace = true, default-features = false, features = [
    "libm",
    "std",
] }
skrifa = { workspace = true }
peniko = { workspace = true }
swash = { workspace = true, default-features = true }

[build-dependencies]

[dev-dependencies]
walkdir = { workspace = true }
jsonschema = { workspace = true }
insta = { workspace = true, features = ["json", "glob"] }
