[package]
name = "set-schema-defaults"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["json", "glob"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
