[package]
name = "slipway-renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
image.workspace = true
imageproc = "0.25.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "1.0.63"

[build-dependencies]
ac-types-generator = { path = "../ac-types-generator" }

[dev-dependencies]
walkdir = "2.5.0"
jsonschema = "0.18.0"
