[package]
name = "slipway_modify_component"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
wit-bindgen-rt = { version = "0.35.0", features = ["bitflags"] }
serde_json = "1.0.104"
serde = { version = "1.0.180", features = ["derive"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:slipway-modify-component"

[package.metadata.component.dependencies]
