[package]
name = "slipway_render_component"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
wit-bindgen-rt = { version = "0.35.0", features = ["bitflags"] }
image = "0.25.2"
serde_json = "1.0.104"
serde = { version = "1.0.180", features = ["derive"] }
adaptive_cards_host_config = { path = "../../src/adaptive_cards_host_config" }
adaptive_cards = { path = "../../src/adaptive_cards" }
adaptive_cards_renderer = { path = "../../src/adaptive_cards_renderer" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:slipway-render-component"

[package.metadata.component.dependencies]
