[package]
name = "slipway_render_component"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
wit-bindgen = { version = "0.41" }
image = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
adaptive_cards_host_config = { workspace = true }
adaptive_cards = { workspace = true }
adaptive_cards_renderer = { workspace = true }

[lib]
crate-type = ["cdylib"]
