[package]
name = "slipway_svg_component"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }
serde_json = "1.0.104"
serde = { version = "1.0.180", features = ["derive"] }
image = "0.25.5"
resvg = "0.44.0"
usvg = "0.44.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:slipway-svg-component"

[package.metadata.component.dependencies]
