[package]
name = "slipway_theme_component"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
wit-bindgen-rt = { version = "0.35.0", features = ["bitflags"] }
serde_json = "1.0.104"
serde = { version = "1.0.180", features = ["derive"] }
adaptive_cards_host_config = { path = "../../src/adaptive_cards_host_config" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:slipway-theme-component"

[package.metadata.component.dependencies]
